api: add support for deleting apps (#327)
* api: add support for deleting apps

Fixes #274

* functions: improve error name and description

* functions: fix test regression
