# api/models/app.go
@@ -8,16 +8,17 @@ import (
 type Apps []*App
 
 var (
-	ErrAppsCreate          = errors.New("Could not create app")
-	ErrAppsUpdate          = errors.New("Could not update app")
-	ErrAppsRemoving        = errors.New("Could not remove app from datastore")
-	ErrAppsGet             = errors.New("Could not get app from datastore")
-	ErrAppsList            = errors.New("Could not list apps from datastore")
-	ErrAppsAlreadyExists   = errors.New("App already exists")
-	ErrAppsNotFound        = errors.New("App not found")
-	ErrAppsNothingToUpdate = errors.New("Nothing to update")
-	ErrAppsMissingNew      = errors.New("Missing new application")
-	ErrUsableImage         = errors.New("Image not found")
+	ErrAppsAlreadyExists    = errors.New("App already exists")
+	ErrAppsCreate           = errors.New("Could not create app")
+	ErrAppsGet              = errors.New("Could not get app from datastore")
+	ErrAppsList             = errors.New("Could not list apps from datastore")
+	ErrAppsMissingNew       = errors.New("Missing new application")
+	ErrAppsNotFound         = errors.New("App not found")
+	ErrAppsNothingToUpdate  = errors.New("Nothing to update")
+	ErrAppsRemoving         = errors.New("Could not remove app from datastore")
+	ErrDeleteAppsWithRoutes = errors.New("Cannot remove apps with routes")
+	ErrAppsUpdate           = errors.New("Could not update app")
+	ErrUsableImage          = errors.New("Image not found")
 )
 
 type App struct {
